[gd_scene load_steps=14 format=2]

[ext_resource path="res://SFX.gd" type="Script" id=1]
[ext_resource path="res://sounds/button_press.wav" type="AudioStream" id=2]
[ext_resource path="res://SFXRand.gd" type="Script" id=3]
[ext_resource path="res://sounds/button_highlight.wav" type="AudioStream" id=4]
[ext_resource path="res://sounds/code_execute.wav" type="AudioStream" id=5]
[ext_resource path="res://sounds/motor_straight.wav" type="AudioStream" id=6]
[ext_resource path="res://sounds/motor_turn.wav" type="AudioStream" id=7]
[ext_resource path="res://sounds/victory.wav" type="AudioStream" id=8]
[ext_resource path="res://sounds/defeat.wav" type="AudioStream" id=9]
[ext_resource path="res://sounds/sound_block_etc.wav" type="AudioStream" id=10]
[ext_resource path="res://sounds/sound_block_pick.wav" type="AudioStream" id=11]
[ext_resource path="res://sounds/sound_block_place.wav" type="AudioStream" id=12]
[ext_resource path="res://sounds/plusbox.wav" type="AudioStream" id=13]

[node name="SFX" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="ButtonPress" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -4.0
bus = "SFX"
script = ExtResource( 3 )

[node name="ButtonHighlight" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -7.0
bus = "SFX"
script = ExtResource( 3 )

[node name="CodeExecute" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = 2.0
bus = "SFX"
script = ExtResource( 3 )

[node name="MotorS" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -8.0
bus = "SFX"
script = ExtResource( 3 )

[node name="MotorT" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -8.0
bus = "SFX"
script = ExtResource( 3 )

[node name="Victory" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
bus = "SFX"
script = ExtResource( 3 )

[node name="Defeat" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
bus = "SFX"
script = ExtResource( 3 )

[node name="BlockEtc" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
bus = "SFX"
script = ExtResource( 3 )

[node name="BlockPut" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -2.0
bus = "SFX"
script = ExtResource( 3 )

[node name="BlockPick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
bus = "SFX"
script = ExtResource( 3 )

[node name="PlusBox" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -1.0
bus = "SFX"
script = ExtResource( 3 )
