extends Node

onready var button_press = $ButtonPress
onready var button_highlight = $ButtonHighlight
onready var code_execute = $CodeExecute

onready var motor_s = $MotorS
onready var motor_t = $MotorT

onready var victory = $Victory
onready var defeat = $Defeat

onready var block_etc = $BlockEtc
onready var block_put = $BlockPut
onready var block_pick = $BlockPick
